agoravai/force-app/main/default/objects/Assassinato__c/fields/Assassinado__c.field-meta.xml
<CustomField>
    <fullName>Assassinado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assassinado</label>
    <referenceTo>Jogador__c</referenceTo>
    <relationshipLabel>Assassinatos (Assassinado)</relationshipLabel>
    <relationshipName>Assassinados</relationshipName>
    <type>Lookup</type>
</CustomField>