agoravai/force-app/main/default/objects/Assassinato__c/fields/Assassino__c.field-meta.xml
<CustomField>
    <fullName>Assassino__c</fullName>
    <label>Assassino(a)</label>
    <referenceTo>Jogador__c</referenceTo>
    <relationshipLabel>Assassinatos</relationshipLabel>
    <relationshipName>Assassinos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>