agoravai/force-app/main/default/objects/Assassinato__c/fields/DataHora__c.field-meta.xml
<CustomField>
    <fullName>DataHora__c</fullName>
    <label>Data e Hora</label>
    <type>DateTime</type>
</CustomField>